<resources>
    <string name="app_name">UZBExchangeRate</string>

    <string name="str_main">Asosiy</string>
    <string name="str_history">Tarix</string>
    <string name="str_settings">Sozlamalar</string>
    <string name="str_currencies">Valyutalar</string>
    <string name="str_exchange">Ayirboshlash</string>
    <string name="str_uzs">UZS</string>
    <string name="str_updated">Yangilangan:</string>
    <string name="check_your_connection">Serverga ulanib boʻlmadi. Internet aloqangizni tekshiring.</string>
    <string name="something_is_wrong"> Nimadir noto`g`ri bajarildi. Iltimos keyinroq qayta urinib ko`ring!</string>
    <string name="select">Tanlang</string>
    <string name="str_uzbek_soum">O`zbek so`mi</string>
    <string name="str_yes">Ha</string>
    <string name="str_no">Yo`q</string>
    <string name="str_do_you_want_to_...">Ushbu elementni o`chirib tashlamoqchimisiz?</string>
    <string name="str_one_amount">1</string>
    <string name="str_equality"> = </string>
    <string name="str_search">Qidirmoq</string>
    <string name="str_zero">0</string>
    <string name="str_max_lines_24">Maksimal elementlar: 24!</string>
    <string name="str_light_mode">Yorqin</string>
    <string name="str_dark_mode">Qorong`u</string>
    <string name="str_system_theme">Tizim mavzusi</string>
    <string name="str_appLanguage">Ilova tili</string>
    <string name="str_app_language">O`zbekcha</string>
    <string name="str_share">Ulashish</string>
    <string name="str_about_program">Dastur haqida</string>
    <string name="str_cancel">Bekor qilish</string>
    <string name="str_russian">Русский</string>
    <string name="str_english">English</string>
    <string name="str_o_zbekcha">O`zbekcha</string>
    <string name="str_apply_for">Qo`llash</string>
    <string name="no_internet_connection">Нет интернет соединения</string>
    <string name="check_connection">Проверьте подключение</string>

</resources>