<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/d_white_100"
    tools:context=".fragments.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/d_white_100"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/d_white_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_settings"
                    android:textColor="@color/d_black_100"
                    android:textSize="@dimen/text_size_18"
                    android:textAppearance="@style/mediumStyle"
                    android:layout_marginStart="@dimen/margin_padding_4"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/margin_padding_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linear_bc_code">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/systemMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_unlink"
                android:drawablePadding="@dimen/margin_padding_16"
                android:padding="@dimen/margin_padding_16"
                android:paddingStart="20dp"
                android:text="@string/str_system_theme"
                android:textSize="@dimen/text_size_14"
                android:thumb="@drawable/thumbs"
                app:track="@drawable/thumb_bg"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/d_gray_20"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/nightMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_moon"
                    android:drawablePadding="@dimen/margin_padding_16"
                    android:padding="@dimen/margin_padding_16"
                    android:paddingStart="22dp"
                    android:text="@string/str_dark_mode"
                    android:textSize="@dimen/text_size_14"
                    android:thumb="@drawable/thumbs"
                    app:track="@drawable/thumb_bg"
                    tools:ignore="RtlSymmetry" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/modeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="76dp"
                    android:text="@string/str_light_mode"
                    android:textAppearance="@style/R12"
                    android:textColor="@color/d_gray_100" />

            </FrameLayout>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/languageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bc_code"
            android:layout_marginTop="@dimen/margin_padding_10"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_language"
                android:drawablePadding="@dimen/margin_padding_16"
                android:gravity="center"
                android:padding="@dimen/margin_padding_16"
                android:paddingStart="@dimen/margin_padding_18"
                android:text="@string/str_appLanguage"
                android:textAppearance="@style/mediumStyle"
                android:textSize="@dimen/text_size_14"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/languageTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_path"
                android:drawablePadding="@dimen/margin_padding_24"
                android:gravity="end"
                android:paddingTop="@dimen/margin_padding_12"
                android:paddingEnd="@dimen/margin_padding_24"
                android:paddingBottom="@dimen/margin_padding_12"
                android:text="@string/str_app_language"
                android:textAppearance="@style/regularStyle"
                android:textColor="@color/d_gray_100"
                android:textSize="@dimen/text_size_12"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10"
            android:background="@drawable/linear_bc_code">

            <TextView
                android:id="@+id/share_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_padding_16"
                android:gravity="center|start"
                android:padding="@dimen/margin_padding_16"
                android:paddingEnd="@dimen/margin_padding_24"
                android:text="@string/str_share"
                android:textAppearance="@style/mediumStyle"
                android:textSize="@dimen/text_size_14"
                app:drawableEndCompat="@drawable/ic_path"
                app:drawableStartCompat="@drawable/ic_share"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_10"
            android:background="@drawable/linear_bc_code">

            <TextView
                android:id="@+id/about_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_padding_16"
                android:gravity="center_horizontal|start"
                android:padding="@dimen/margin_padding_16"
                android:paddingEnd="@dimen/margin_padding_24"
                android:text="@string/str_about_program"
                android:textAppearance="@style/mediumStyle"
                android:textSize="@dimen/text_size_14"
                app:drawableEndCompat="@drawable/ic_path"
                app:drawableStartCompat="@drawable/ic_info_circle"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>