<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="86dp"
    android:layout_marginVertical="@dimen/margin_padding_4"
    android:background="@drawable/bg_linear_currency_item_50"
    android:padding="@dimen/margin_padding_4">

    <TextView
        android:id="@+id/tv_currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_4"
        android:layout_marginTop="@dimen/margin_padding_2"
        android:text="US Dollar"
        android:textColor="@color/d_black_100"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_one_amount"
            android:textColor="@color/d_black_100"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_currency_ccy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="USD"
            android:textColor="@color/d_black_100"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_equality"
            android:textColor="@color/d_black_100"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_currency_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11235,03"
            android:textColor="@color/d_black_100"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_uzs"
            android:textColor="@color/d_black_100"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_currency_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_4"
        android:layout_marginBottom="@dimen/margin_padding_4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_updated"
            android:textColor="@color/d_black_50"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_currency_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="06.04.2022"
            android:textColor="@color/d_black_50"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_6"
        android:layout_marginEnd="@dimen/margin_padding_12"
        android:src="@drawable/ic_empty_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_exchange"
        android:layout_width="@dimen/margin_padding_30"
        android:layout_height="@dimen/margin_padding_30"
        android:layout_marginTop="@dimen/margin_padding_4"
        android:layout_marginEnd="@dimen/margin_padding_16"
        android:src="@drawable/ic_exchange"
        app:iconTint="@color/s_blue_100"
        app:layout_constraintEnd_toStartOf="@id/iv_star"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/ll_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_12"
        android:layout_marginBottom="@dimen/margin_padding_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/tv_diff_amount_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-23.43"
            android:textColor="@color/s_red_100"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_diff_amount_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-23.43"
            android:visibility="invisible"
            android:textColor="@color/s_green_100"
            android:textSize="@dimen/text_size_12" />

    </FrameLayout>

    <ImageView
        android:id="@+id/iv_diff_state"
        android:layout_width="@dimen/margin_padding_26"
        android:layout_height="@dimen/margin_padding_20"
        android:layout_marginEnd="@dimen/margin_padding_10"
        android:layout_marginBottom="@dimen/margin_padding_6"
        android:src="@drawable/ic_decrease"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_diff" />

</androidx.constraintlayout.widget.ConstraintLayout>